--- a/index.html
+++ b/index.html
@@ -193,6 +193,12 @@ a:active {
 				<li>[May 31, 2024] Our paper "BackdoorIndicator: Leveraging OOD Data for Proactive Backdoor Detection in Federated Learning" is accepted to USENIX Security 2024. Congratulations to Yanbo!
 				</li><br>		
 
+				<li>[May 28, 2024] Congratulations to Jin Liu on sucessfully defending his MPhil thesis!
+				</li><br>	
+
+				<li>[Mar. 5, 2024] Congratulations to Yanbo Dai on sucessfully defending his MPhil thesis!
+				</li><br>	
+
 				<li>[Jan. 16, 2024] Our paper "Constructing Adversarial Examples for Vertical Federated Learning: Optimal Client Corruption through Multi-Armed Bandit" is accepted to ICLR 2024. Congratulations to Duanyi!
 				</li><br>	
 
@@ -209,7 +215,7 @@ a:active {
 				<li>[July 22, 2023] I delivered an invited talk "LightSecAgg: A Lightweight and Versatile Design for Secure Aggregation in Federated Learning" at Eighth SYSU Information and Coding Theory Forum (第八届信息论与编码中大论坛).
 				</li><br>
 
-				<li>[July 3, 2023] Congratulations to Jiaxiang Tang's on sucessfully defending his MPhil thesis.
+				<li>[July 3, 2023] Congratulations to Jiaxiang Tang on sucessfully defending his MPhil thesis!
 				</li><br>
 
 				<li>[April 29, 2023] Our paper "Communication-Efficient Coded Computing for Distributed Multi-Task Learning" is accepted to IEEE Transactions on Communications.
