--- a/team.html
+++ b/team.html
@@ -111,6 +111,15 @@ a:active {
 				</li>
 			</ul> -->
 
+	  <h3>Southeast University</h3>
+      <h3>PhD Students</h3>
+      <ul>
+      	 <li>
+         Chenqing Zhu (since 2024 fall)
+        </li>
+      </ul>
+
+
 	  <h3>HKUST and HKUST(GZ)</h3>
       <h3>PhD Students</h3>
       <ul>
@@ -138,7 +147,7 @@ a:active {
 				</li>
       </ul>
 
-      <h3>MPhil Students</h3>
+      <h3>Master Students</h3>
       <ul>
 				<li>
           <a href="mailto:ydai851@connect.hkust-gz.edu.cn">Yanbo Dai</a> (since 2022 fall)
@@ -148,9 +157,9 @@ a:active {
           <a href="mailto:jliu577@connect.hkust-gz.edu.cn">Jin Liu</a> (since 2022 fall)
         </li>
 
-				<li>
+		<!-- 		<li>
           <a href="mailto:czhu032@connect.hkust-gz.edu.cn">Chenqing Zhu</a> (since 2022 fall)
-        </li>
+        </li> -->
 
 				<li>
           <a href="mailto:mliu007@connect.hkust-gz.edu.cn">Mingzhe Liu</a> (since 2022 fall)
@@ -164,9 +173,9 @@ a:active {
 					<a href="mailto:mchen899@connect.hkust-gz.edu.cn">Mengqi Chen</a> (since 2022 fall)
 				</li>
 
-				<li>
+<!-- 				<li>
 					<a href="mailto:lluo476@connect.hkust-gz.edu.cn">Lan Luo</a> (since 2022 fall)
-				</li>
+				</li> -->
       </ul>
 
 
@@ -183,11 +192,11 @@ a:active {
 			<h3>Post-doc Researchers</h3>
 			<ul>
 				<li>
-					<a href="mailto:jbzhu@ust.hk">Dr. Jinbao Zhu</a>, 2021-2023.
+					<a href="mailto:jbzhu@ust.hk">Dr. Jinbao Zhu</a>, 2021-2023, now assistant professor at Southwest Jiaotong University.
 				</li>
 			</ul>
 
-			<h3>MPhil Students</h3>
+			<h3>Master Students</h3>
 			<ul>
 			<li>
 				<a href="mailto:jtangbe@connect.ust.hk">Jiaxiang Tang</a>, 2021-2023, now pursing PhD at University of Minnesota Twin Cities.
