--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ a:active {
 				<h2> News </h2>
 				<ul>
 
-				<li>[May 31, 2024] Our paper "BackdoorIndicator: Leveraging OOD Data for Proactive Backdoor Detection in Federated Learning" is accepted to USENIX Security 2024. Congratulations to Yanbo!
+				<li>[May 31, 2024] Our paper "<a href="https://arxiv.org/abs/2405.20862">BackdoorIndicator: Leveraging OOD Data for Proactive Backdoor Detection in Federated Learning</a>" is accepted to USENIX Security 2024. Congratulations to Yanbo!
 				</li><br>		
 
 				<li>[May 28, 2024] Congratulations to Jin Liu on sucessfully defending his MPhil thesis!
