--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@ a:active {
 				<h2> Research Interests </h2>
 				<ul>
   				<!-- <li>Federated learning</li><br> -->
-  				<li>AI security and privacy</li><br>
+  				<li>Federated learning security and privacy</li><br>
+  				<li>Security, privacy, and safety of large language and multi-modal models</li><br>
 				<li>Secure multi-party computation</li><br>
 				<li>Blockchain security and scalability</li>
 				</ul>
