--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ a:active {
 <tr>
 	<td align="justify" width="1000" valign="top" style="padding-left: 80px; padding-right: 200px">
 		<strong>
-			<p style="font-size:28px; color:red">For up-to-date information, please visit our "<a href="https://s3di-lab.github.io/">S3DI lab website</a>". </p>
+			<p style="font-size:28px; color:red">For up-to-date information, please visit our <a href="https://s3di-lab.github.io/">S3DI lab website</a>. </p>
 			
 			<!-- <p style="font-size:18px; color:red">I am joining the Hong Kong University of Science and Technology as an assistant professor starting Dec. 2020. </p> -->
 
